[package]
name = "fedora"
description = "base library for interacting with fedora services"
license = "MIT OR Apache-2.0"

version = "2.0.0-beta.2"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/.github/", "/rustfmt.toml"]
categories = ["api-bindings"]
keywords = ["fedora", "client", "authentication", "openid"]
repository = "https://github.com/ironthree/fedora-rs"

[features]
default = []

[dependencies]
bytes = "1.0"
cookie = "0.15"
cookie_store = "0.15"
dirs = "^3.0.1"
log = "0.4.13"
reqwest = { version = "^0.11", features = ["cookies"] }
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
thiserror = "^1.0"
url = "^2.1.0"

[dev-dependencies]
# only needed for example code
env_logger = "0.9"
rpassword = "5"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
