[package]
name = "fedora"
description = "Base library for interacting with Fedora web services"
license = "MIT OR Apache-2.0"

version = "2.1.0-dev"
edition = "2021"
rust-version = "1.56.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/.github/", "/rustfmt.toml"]
categories = ["api-bindings"]
keywords = ["fedora", "client", "authentication", "openid"]
repository = "https://github.com/ironthree/fedora-rs"

[features]
default = []

[dependencies]
bytes = "1.1"
cookie = "0.15.1"
cookie_store = "0.15.1"
dirs = "3.0.2"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["cookies"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
url = "^2.2.2"

[dev-dependencies]
# only needed for example code
env_logger = "0.9"
rpassword = "5"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
